# r2-data2

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  _typos.toml  deny.toml
.cursor/memory/: COMPONENT_ARCHITECTURE.md  UI_ENHANCEMENT_SPEC.md  UI_MOCKUP.md  activeContext.md  productContext.md  progress.md  project_status_summary.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
.github/workflows/: build.yml
config/: default.toml  development.toml
examples/: test.rest
fixtures/migrations/users/: 20250501180257_init.sql
specs/: 0001-design.md  instructions.md  prompt-base.md
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/ai/: mod.rs  rig.rs
src/ai/snapshots/: r2_data2__ai__rig__tests__format_schema_simple.snap
src/db/: mod.rs  mysql.rs  opensearch.rs  pg.rs  redis.rs  scylladb.rs
src/handlers/: mod.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: DatabaseSelector.tsx  QueryHistory.tsx  ResultViewer.tsx  SchemaBrowser.tsx  SqlEditor.tsx
ui/src/components/ai/: GenerateQueryModal.tsx
ui/src/components/catalog/: CatalogBrowser.tsx  DatabaseTree.tsx  FieldDetailPopup.tsx  SearchFilterBar.tsx
ui/src/components/editor/: CommandEditor.tsx  DynamicEditor.tsx  EditorHeader.tsx  JsonEditor.tsx  QueryTabBar.tsx
ui/src/components/layout/: ThreeColumnLayout.tsx
ui/src/components/toolbox/: QueryHistoryPanel.tsx  SaveQueryDialog.tsx  ToolboxSidebar.tsx
ui/src/components/ui/: button.tsx  data-table.tsx
ui/src/components/viz/: ChartConfigPanel.tsx  ChartTypeSelector.tsx  CustomTooltip.tsx  QueryPlanViewer.tsx  RechartsRenderer.tsx
ui/src/lib/: chartUtils.test.ts  chartUtils.ts
ui/src/store/: useAppStore.test.ts  useAppStore.ts
