[package]
name = "r2-data2"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/r2-data-2"
repository = "https://github.com/tyr-chen/r2-data-2"
homepage = "https://github.com/tyr-chen/r2-data-2"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "macros"] }
config = "0.15.11"
jsonwebtoken = "9.3.1"
mime_guess = "2.0.5"
papaya = { version = "0.2.1", features = ["serde"] }
rust-embed = { version = "8.7.0", features = ["axum-ex"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlparser = "0.55.0"
sqlx = { version = "0.8.5", features = [
  "runtime-tokio-rustls",
  "postgres",
  "mysql",
  "json",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
