[package]
name = "r2-data2"
version = "0.2.1"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/r2-data-2"
repository = "https://github.com/tyr-chen/r2-data-2"
homepage = "https://github.com/tyr-chen/r2-data-2"
description = """
A web-based SQL query tool and data browser with visualization capabilities,
built with Rust (Axum) and React (TypeScript/Vite). 95% of the code is written by AI agent.
"""
readme = "README.md"
categories = ["development-tools"]
keywords = ["sql", "database", "axum", "visualization", "data-browser"]
include = ["ui/dist/**/*", "src/**/*", "Cargo.toml"]

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "macros"] }
clap = { version = "4.5", features = ["derive"] }
config = "0.15.11"
jsonwebtoken = "9.3.1"
mime_guess = "2.0.5"
moka = { version = "0.12", features = ["future"] }
papaya = { version = "0.2.1", features = ["serde"] }
rig-core = "0.12.0"
rust-embed = { version = "8.7.0", features = ["axum-ex"] }
redis = { version = "0.25.0", features = ["tokio-comp"] }
opensearch = "2.1.0"
scylla = "0.12.0"
async-trait = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.55.0"
sqlx = { version = "0.8.5", features = [
  "runtime-tokio-rustls",
  "postgres",
  "mysql",
  "json",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
anyhow = "1.0"
insta = { version = "1.43", features = ["yaml"] }

[[bin]]
name = "r2-data2"
path = "src/main.rs"
